# sheep

./: .gitignore  HANDOFF.md  README.md  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  import_mcq_jsonl.py  pyproject.toml  seed.py
backend/app/: db.py  main.py  models.py
backend/app/adapters/: llm.py
backend/app/core/: config.py
backend/app/services/: import_mcq.py  planner.py  quiz.py
backend/tests/: test_api.py  test_logic.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  styles.css
